# hrl_kinematics

./: CMakeLists.txt  LICENSE  README.md  package.xml  stack.xml
include/hrl_kinematics/: Kinematics.h  TestStability.h
src/: Kinematics.cpp  TestStability.cpp  test_stability.cpp
